builder/tests/08-unrecognized-attribute.stderr
error: unsupported builder property
  --> tests/08-unrecognized-attribute.rs:22:15
   |
22 |     #[builder(eac = "arg")]
   |               ^^^
